<resources>
    <string name="app_name">GreenFlag</string>
    <string name="create_an_account">Create an account</string>

    <string name="greenflag_customers_can_create_an_account_to_access">GreenFlag customers can create an account to access</string>
    <string name="car_health_updates">Car Health Updates</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="policy_information">Policy information</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email address</string>
    <string name="create_password">Create password</string>
    <string name="see_criteria_below">See criteria below</string>
    <string name="repeat_password">Repeat password</string>
    <string name="please_check_your_password">Please check your password</string>
    <string name="password_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter.You can use special characters.</string>
    <string name="next">Next</string>
</resources>
