<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/black">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="410dp"
        android:layout_height="54dp"
        android:layout_marginEnd="1dp"
        android:minHeight="?actionBarSize"
        android:scrollbarSize="8dp"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Create an account"
        app:titleMargin="4dp"
        app:titleMarginStart="124dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="@string/email_address"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/EditEmail2"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="66dp" />

    <EditText
        android:id="@+id/EditEmail2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="89dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6" />
    <EditText
        android:id="@+id/RedEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="#A31111"
        android:textColor="#A31111"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="89dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6" />
    <EditText
        android:id="@+id/GreenEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="#16A311"
        android:textColor="#16A311"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="89dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"  />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_password"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/EditPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditPassword2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/see_criteria_below"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/RedPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:backgroundTint="#A31111"
        android:textColor="#A31111"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/GreenPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:backgroundTint="#16A311"
        android:textColor="#16A311"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="360dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/repeat_password"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/EditRepeatPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditRepeatPassword3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="289dp" />
    <TextView
        android:id="@+id/ErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:text="@string/please_check_your_password"
        android:textColor="#F60505"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/password_criteria"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="344dp" />




    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:alpha=".25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView9"
        app:layout_constraintVertical_bias="0.968"
        app:srcCompat="@drawable/gradient_button_background"
        tools:ignore="SpeakableTextPresentCheck"/>
    <TextView
        android:id="@+id/TextView9"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:text="@string/next"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toTopOf="@id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>
